[workspace]
members = ["stylus-sdk", "stylus-proc", "stylus-replay"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["Offchain Labs"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-sdk-rs"
repository = "https://github.com/OffchainLabs/stylus-sdk-rs"
rust-version = "1.71.0"

[workspace.dependencies]
alloy-primitives = { version = "0.3.1", default-features = false , features = ["native-keccak"] }
alloy-sol-types = { version = "0.3.1", default-features = false }
cfg-if = "1.0.0"
derivative = { version = "2.2.0", features = ["use_core"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
keccak-const = "0.2.0"
lazy_static = "1.4.0"
sha3 = "0.10.8"

# data structures
fnv = "1.0.7"

# proc macros
syn = { version = "1.0", features = ["full"] }
paste = "1.0.14"
quote = "1.0"
regex = "1.9.1"
proc-macro2 = "1.0"
syn-solidity = "=0.3.1"
convert_case = "0.6.0"

# tooling only
clap = { version = "4.4.5", features = ["derive"] }
ethers = "2.0.10"
eyre = "0.6.8"
serde = "1.0.188"
function_name = "0.3.0"
libc = "0.2.148"
libloading = "0.8.0"
parking_lot = "0.12.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
rustc-host = "0.1.7"

# members
stylus-sdk = { path = "stylus-sdk" }
stylus-proc = { path = "stylus-proc", version = "0.4.0" }
