[package]
name = "bls"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = { path = "../../../stylus-sdk-rs/stylus-sdk" }
wee_alloc = "0.4.5"
bls12_381 = { version = "0.7", default-features = false, features = ["groups", "pairings", "alloc", "experimental"] }
pairing = "0.22"
sha2 = "0.9"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]